--- a/movies.css
+++ b/movies.css
@@ -68,55 +68,118 @@ nav .search-bar button:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    nav {
-        flex-direction: column;
-        align-items: flex-start;
-    }
+.card {
+    margin-top: 40px;
+}
 
-    nav .logo h1 {
-        font-size: 20px;
-    }
+.movieCard {
+    display: flex;
+    background-color: #fff;
+    padding: 22px;
+    width: 1000px;
+    /* Corrected: Added 'px' unit */
+    margin: auto;
+    gap: 25px;
+    border-radius: 5px;
+}
 
-    nav .search-bar {
-        width: 100%;
-        margin-top: 10px;
-    }
+.movieCard h1 {
+    text-align: center;
+}
 
-    nav .search-bar input[type="text"] {
-        flex-grow: 1;
-        margin-right: 10px;
-    }
+.movieCard .rating {
+    text-align: center;
+}
 
-    nav .search-bar button {
-        width: 100%;
-        margin-left: 0;
-        margin-top: 10px;
+.movieCard p {
+    margin-top: 22px;
+}
+
+.cardText {
+    margin-top: 23px;
+}
+
+.movieCard a {
+    background: #dd5252;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    padding: 7px;
+    margin: auto;
+    position: relative;
+    margin-top: 20px;
+}
+
+.movieCard span {
+    color: rgb(27, 21, 21);
+}
+
+.card h1 {
+    text-align: center;
+}
+
+@media screen and (max-width: 1100px) {
+    .movieCard {
+        width: 90%;
     }
 }
 
-@media (max-width: 480px) {
-    nav .logo h1 {
-        font-size: 18px;
+@media screen and (max-width: 700px) {
+    nav {
+        display: block;
+        height: 120px;
     }
 
-    nav .search-bar {
-        flex-direction: column;
-        align-items: flex-start;
+    .search-bar {
+        display: flex;
+        justify-content: center;
+        margin-top: 11px;
     }
 
-    nav .search-bar input[type="text"] {
+    .logo {
+        text-align: center;
+    }
+
+    .movieCard {
+        display: block;
+        text-align: center;
+        width: 80%;
+    }
+
+    .movieCard img {
         width: 100%;
-        margin-bottom: 10px;
+        height: auto;
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .search-bar input {
+        width: 50%;
     }
 
-    nav .search-bar button {
+    .search-bar button {
+        margin-inline: 3px;
+        font-size: 10px;
+    }
+
+    .search-bar img {
+        width: 80%;
+    }
+
+    .movieCard {
         width: 100%;
+        display: block;
+        text-align: center;
     }
 
-    .img {
-        font-size: 16px;
-        padding: 15px;
+    .movieCard img {
+        width: 100%;
+        height: auto;
+        max-width: 100%;
     }
 }
